<resources>
    <string name="app_name">Ceylon Paradise</string>
    <string name="name_enter">Enter full name</string>
    <string name="text_name">Name</string>
    <string name="text_address">Address</string>
    <string name="address_enter">Address Line1</string>
    <string name="address_entertwo">Address Line2</string>
    <string name="address_enterthree">Address Line3</string>
    <string name="text_phone">Phone</string>
    <string name="phone_enter">Enter Phone Number</string>
    <string name="text_email">E mail</string>
    <string name="email_enter">Enter your e-mail</string>
    <string name="btn_save">SAVE CHANGES</string>
    <string name="bill_view">Billing Address</string>
    <string name="cancel_order">Order Cancelation</string>
    <string name="kottu_fish">Fish Kottu</string>
    <string name="des_kottu">Shredded fish, Onions, Vegetables and Cheese are included.</string>
    <string name="cancel_btn">CONFIRM CANCELATION</string>
    <string name="orders_view">Orders</string>
    <string name="search_view">Search Oder ID</string>
    <string name="order_first">Order 106</string>
    <string name="order_second">ORDER 74</string>
    <string name="order_third">ORDER 47</string>
    <string name="kottu_order">Fish Kottu</string>
    <string name="rice_order">Mixed Rice</string>
    <string name="pizza_order">Hot Chili Chicken</string>
    <string name="confirm_kottu">CONFIRM</string>
    <string name="confirm_rice">CONFIRM</string>
    <string name="confirm_pizza">CONFIRM</string>
    <string name="cancel_kottu">CANCEL</string>
    <string name="cancel_rice">CANCEL</string>
    <string name="cancel_pizza">CANCEL</string>
    <string name="food_view">Fish Kottu</string>
    <string name="about_view"><![CDATA[Shredded fish, Onions. Vegetables & Cheese are included.]]></string>
    <string name="view_size">Size</string>
    <string name="view_qty">Qty</string>
    <string name="input_s">Choose Size</string>
    <string name="input_quan">Enter Qty</string>
    <string name="order_view">ORDER</string>
    <string name="Input_value">Rs 240</string>
    <string name="show_kottu">KOTTTU</string>
    <string name="show_rice">RICE</string>
    <string name="show_pizza">PIZZA</string>
    <string name="address_in">W.D.L Perera  No 12/A  Waliwita,  Malabe  0774265462</string>
    <string name="change_btn">CHANGE</string>
    <string name="payment_view">SELECT PAYMENT METHOD</string>
    <string name="fish_id">Fish Kottu</string>
    <string name="fish_about"><![CDATA[Shredded fish, Onions, Vegetables & Cheese are included.]]></string>
    <string name="fish_value">Rs 240</string>
    <string name="summary_id">Order Summary (1 Item)</string>
    <string name="discount_view">Discount          Rs  020.00</string>
    <string name="total_view">Grand Total          Rs  220.00</string>
    <string name="last_value">Rs 220.00</string>
    <string name="place_btn">PLACE ORDER</string>
    <string name="confirm_ord">Order Confirmation</string>
    <string name="cus_name">Name</string>
    <string name="edit_name">P.A Hashan Subasinghe</string>
    <string name="cus_email">E mail</string>
    <string name="cus_p">Phone</string>
    <string name="cus_user">Username</string>
    <string name="cus_type">Type</string>
    <string name="in_mail">hashansubasinghe92@gmail.com</string>
    <string name="input_mail">hashanS9@gmail.com</string>
    <string name="edit_p">0774555452</string>
    <string name="inp_user">hashansj</string>
    <string name="type_cus">Customer</string>
    <string name="up_btn">Update Profile</string>
    <string name="dl_btn">Delete Profile</string>
    <string name="Pro_file">Profile</string>
    <string name="view_first">VIEW MENU</string>
    <string name="view_second">VIEW MENU</string>
    <string name="value_hint">Search Restaurant</string>
    <string name="choose_res">Choose Restaurant</string>
    <string name="hotel_first">DFC Restaurant</string>
    <string name="view_rate">Nugegoda</string>
    <string name="hotel_second">Tasty Hub</string>
    <string name="view_rat">Panadura</string>
    <string name="hotel_third">Sea Line Cafe</string>
    <string name="view_in">Galle</string>
    <string name="view_three">VIEW MENU</string>
    <string name="cus_nameed">First name</string>
    <string name="edit_firstn">Enter first name</string>
    <string name="edit_firstne">Peter</string>
    <string name="edit_namei">Parker</string>
    <string name="cus_namel">Last name</string>
</resources>